estable se añadieron los controller de cient freelance y enterprice